ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path:
        backend:
          serviceName: uklon-kuber
          servicePort: 3000
